--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -4,3 +4,58 @@
 
 {{{body}}}
 {{> footer}}
+
+<div class="popup" id="popup">
+    Item successfully added to cart
+</div>
+<div class="overlay" id="overlay"></div>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $('.add-to-cart-form').on('submit', function(event) {
+            event.preventDefault(); 
+            var form = $(this);
+            var formData = form.serialize();
+
+            $.ajax({
+                type: form.attr('method'),
+                url: form.attr('action'),
+                data: formData,
+                success: function(response) {
+                    $('#popup').addClass('show');
+                    $('#overlay').addClass('show');
+                    setTimeout(function() {
+                        $('#popup').removeClass('show');
+                        $('#overlay').removeClass('show');
+                    }, 1000);
+                },
+                error: function() {
+                    alert('Error adding item to cart.');
+                }
+            });
+        });
+    });
+</script>
+  <style>
+      .card-equal {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          width: 100%;
+      }
+      .popup {
+          display: none;
+          position: fixed;
+          top: 40px;
+          left: 50%;
+          transform: translateX(-50%);
+          padding: 20px;
+          background: white;
+          border: 1px solid black;
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+          z-index: 1000;
+      }
+      .popup.show {
+          display: block;
+      }
+  </style>
