--- a/ProjectSourceCode/src/views/pages/favorites.hbs
+++ b/ProjectSourceCode/src/views/pages/favorites.hbs
@@ -1,11 +1,3 @@
-<style>
-    .card-equal {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 100%;
-    }
-  </style>
   <div class="container mt-5">
     <h2 class="mb-4">Favorites</h2>
     <div class="row">
@@ -18,11 +10,13 @@
             <p class="card-text"><strong>Year:</strong> {{this.release_year}}</p>
             <p class="card-text"><strong>Genre:</strong> {{this.genre}}</p>
             <p class="card-text"><strong>Format:</strong> {{this.format}}</p>
+            <p class="card-text"><strong>Price:</strong> ${{this.price}}</p>
             &nbsp;
-            <form action="/add-to-cart" method="post">
+            <form action="/add-to-cart" method="post" class="add-to-cart-form">
                 <input type="hidden" name="contentId" value="{{this.content_origin_id}}">
                 <button type="submit" class="btn btn-primary">Add to Cart</button>
-            </form>&nbsp;
+            </form>
+            &nbsp;
 
             <form action="/remove-from-favorites" method="POST" class="mt-auto">
                 <input type="hidden" name="title" value="{{this.title}}">
