--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -1,8 +1,24 @@
+<style>
+        .logo {
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+            font-weight:bolder;
+            font-size: 26px;
+            color: #316cf4;
+            letter-spacing: -0.5px;
+            margin-left: 5px;
+            margin-right: 20px;
+
+        }
+</style>
+
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li>
+                        <div class="logo">MODOM </div>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
